# self

./: .gitignore  Cargo.toml  build.rs  license.md  readme.md
.github/workflows/: main.yml
src/: contexting.rs  core_atom.rs  lib.rs  parse.rs  parsed.rs  parsed_aux.rs  readme.md  streaming.rs  success.rs
src/base/: all.rs  any.rs  ascii.rs  base_atom.rs  character.rs  end_of_stream.rs  failure.rs  float.rs  is.rs  list.rs  mod.rs  nbit.rs  octet.rs  one_of.rs  parse.rs  primitive.rs  radix.rs  readme.md  sign.rs  success.rs  tag.rs  take.rs  to_digit.rs  utf8.rs
src/context/: ignore.rs  keep.rs  mod.rs  readme.md  stack.rs  tree.rs
src/core/: acc.rs  core_atom.rs  extend.rs  mod.rs  parse.rs  parsed.rs  readme.md  streaming.rs  try_acc.rs
src/stream/: bit_stream.rs  mod.rs  reader_stream.rs  readme.md  string_stream.rs  vec_stream.rs
src/utils/: acc.rs  add_atom.rs  and.rs  and_drop.rs  and_then.rs  drop.rs  drop_and.rs  drop_first.rs  drop_last.rs  enumerate.rs  fill.rs  filter.rs  filter_map.rs  fold_bounds.rs  fold_until.rs  limit.rs  map.rs  mod.rs  not.rs  opt.rs  or.rs  peek.rs  push.rs  readme.md  span.rs  to.rs  try_acc.rs  try_extend.rs  try_fold_bounds.rs  try_fold_iter.rs  try_fold_until.rs  try_map.rs  try_push.rs
