[package]
name = "binator"
authors = ["Stargateur <plaskowski.stanislas@gmail.com>"]
version = "0.1.0"
description = "Parser Combinator"
license = "Zlib"
repository = "https://github.com/binator/self"
readme = "readme.md"
keywords = ["parsing", "combinator", "utils"]
categories = ["parsing"]
edition = "2021"

include = [
  "readme.md",
  "license.md",
  "Cargo.toml",
  "build.rs",
  "rustfmt.toml",
  "src/**/*.rs",
]

[package.metadata.docs.rs]
all-features = true

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[profile.bench]
lto = true
codegen-units = 1
opt-level = 3

[features]
default = ["stack", "tree", "alloc", "radix", "serde", "hashmap", "std", "smallvec/serde"]
std = ["alloc"]
alloc = []
hashmap = ["std"]
stack = ["smallvec"]
tree = ["smallvec", "alloc"]
radix = ["num-traits"]
serde = ["dep:serde"]

[dependencies]

[dependencies.paste]
version = "1"
default-features = false

[dependencies.owo-colors]
version = "3"
default-features = false

[dependencies.num-traits]
version = "0.2"
optional = true
default-features = false

[dependencies.tracing]
version = "0.1"
optional = true
default-features = false

[dependencies.serde]
version = "1.0"
optional = true
default-features = false
features = ["derive"]

[dependencies.either]
version = "1.7"
optional = true
default-features = false

[dependencies.smallvec]
version = "1.7"
optional = true
default-features = false
features = ["const_new", "union", "const_generics"]

[dev-dependencies]
derive_more = "0.99"
derive-new = "0.5"
rand = "0.8.4"
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["env-filter", "fmt"]}
env_logger = "0.9"
test-log = { version = "0.2.10", features = ["trace"] }

[build-dependencies]
quote = "1"
rustfmt-wrapper = "0.1"
syn = "1"
